Applications/my-web/k8s_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: production
  labels:
    app: myapp
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
  - name: http
    port: 80
    targetPort: 3000
    nodePort: 30081
    protocol: TCP
  sessionAffinity: None
